# meltano-project

./: .dockerignore  .gitignore  Dockerfile  README.md  create_custom.sh  env_config.yml  meltano.yml  requirements.txt
.github/workflows/: ci-deployment.yml
pipelines/: pipeline_config.yml
plugins/custom/: custom_config.yml  totango_config.yml
plugins/custom/tap-cvent/: README.md  meltano.yml  pyproject.toml
plugins/custom/tap-cvent/.github/workflows/: ci_workflow.yml
plugins/custom/tap-cvent/tap_cvent/: __init__.py  auth.py  client.py  paginator.py  streams.py  tap.py
plugins/custom/tap-cvent/tap_cvent/schemas/: data.json  events.json  paging.json
plugins/custom/tap-cvent/tests/: __init__.py  test_core.py
plugins/custom/tap-google-analytics/: LICENSE  README.md  meltano.yml  pyproject.toml  reports.json
plugins/custom/tap-google-analytics/tap_google_analytics/: __init__.py  client.py  tap.py
plugins/custom/tap-google-analytics/tests/: __init__.py  test_core.py
plugins/custom/tap-okta/: README.md  meltano.yml  pyproject.toml
plugins/custom/tap-okta/tap_okta/: __init__.py  client.py  streams.py  tap.py
plugins/custom/tap-okta/tests/: test_core.py
plugins/custom/tap-totango/: README.md  config.yml  meltano.yml  pyproject.toml
plugins/custom/tap-totango/tap_totango/: client.py  paginator.py  streams.py  tap.py
plugins/custom/tap-totango/tap_totango/schemas/: accounts.json  events.json  touchpoint_tags.json  touchpoint_types.json  touchpoints.json  users.json
plugins/custom/tap-totango/tests/: __init__.py  test_core.py
plugins/extractors/: extractors_config.yml  reports.json
plugins/loaders/: loaders_config.yml
plugins/mappers/: mappers_config.yml
