[tool.poetry]
name = "tap-cvent"
version = "0.0.1"
description = "`tap-cvent` is a Singer tap for cvent, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["FirstName LastName"]
keywords = [
    "ELT",
    "cvent",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.27.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.28.2"
cached-property = "^1" # Remove after Python 3.7 support is dropped

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.27.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_cvent"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_cvent"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-cvent = 'tap_cvent.tap:Tapcvent.cli'
